--- a/renderer/assets/styles/index.scss
+++ b/renderer/assets/styles/index.scss
@@ -11,23 +11,29 @@ $green: #33cc99;
 $dark-green: #339966;
 $red: #bd2222;
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   color: $grey;
   background-color: $white;
   font-family: $font;
   font-size: 1px;
+  height: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
   line-height: 1.3;
-  height: 100%;
   min-height: 100%;
+  display: flex;
 }
 
-*{
-  box-sizing: border-box;
+#app {
+  align-items: stretch;
+  width: 100%;
 }
 
 .hide {
@@ -39,7 +45,7 @@ body {
   text-align: center;
   font-size: 20rem;
   width: 100%;
-  height: 500rem;
+  min-height: 100%;
 }
 
 .main {
@@ -48,7 +54,7 @@ body {
 
 .header {
   background-color: #F5F5F5;
-  height: 100rem;
+  height: auto;
   padding: 20rem;
   display: flex;
   justify-content: center;
@@ -58,30 +64,42 @@ body {
   }
 }
 
-.main-nav {
-  position: absolute;
-  bottom: 0;
-  height: 100rem;
-  padding: 20rem;
-  width: 100%;
-  background-color: #F5F5F5;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  margin: 0;
+.nav-container {
+  .main-nav {
+    position: absolute;
+    bottom: 0;
+    height: 100rem;
+    padding: 20rem;
+    width: 100%;
+    background-color: #F5F5F5;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin: 0;
 
-  .menu-item {
-    text-decoration: none;
-    padding: 40rem 50rem;
+    .menu-item {
+      text-decoration: none;
+      padding: 40rem 50rem;
 
-    &:hover {
-      background-color: #FAFAFB;
+      &:hover {
+        background-color: #FAFAFB;
+      }
+
+      &.active {
+        color: #EA4335;
+        font-weight: 500;
+      }
     }
+  }
+
+  .fake-nav {
+    display: block;
+    height: 100rem;
   }
 }
 
 .todo-list {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
